# TileGame

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: game.c  globals.h  main.c  state.h
src/component/: c_collider.c  c_collider.h  c_sprite.c  c_sprite.h  c_translate.c  c_translate.h  collider.c  sprite.c  sprite.h  transform.c  transform.h  translate.c  translate.h
src/core/: grid.c  grid.h  player.c  player.h  sprite.h
src/entity/: player.c  player.h
src/util/: collision.c  collision.h  u_collision.c  u_collision.h  u_math.c  u_math.h  u_misc.c  u_misc.h  umath.c  umath.h  umisc.c  umisc.h
src/world/: grid.c  grid.h  tilemap.c  tilemap.h
